--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,7 @@ html {
 
    body {
   background: $white;
-  background-image: url(../img/bgrnd2.png);
+  background-image: url(/images/bgrnd2.png);
   color: #ececec;
   padding: 0;
   margin: 0;
