--- a/style.scss
+++ b/style.scss
@@ -16,7 +16,7 @@
 html {
   font-size: 100%;
 }
-.wrapper-masthead{margin-top:10px;}
+div.wrapper-masthead{margin-top:10px;}
 
    body {
   background: $white;
