--- a/style.scss
+++ b/style.scss
@@ -16,7 +16,6 @@
 html {
   font-size: 100%;
 }
-div.wrapper-masthead{margin-top:25px;}
 
    body {
   background: $white;
@@ -156,6 +155,7 @@ img {
 //
 
 .wrapper-masthead {
+  margin-top: 25px;
   margin-bottom: 10px;
 }
 
